# cmake-abseil

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
Foo/: CMakeLists.txt
Foo/src/: Foo.cpp
FooApp/: CMakeLists.txt
FooApp/src/: main.cpp
ci/: Makefile
ci/docker/alpine/: Dockerfile  InstallDockerfile
ci/docker/archlinux/: Dockerfile  InstallDockerfile
ci/docker/centos/: Dockerfile  InstallDockerfile
ci/docker/debian/: Dockerfile  InstallDockerfile
ci/docker/fedora/: Dockerfile  InstallDockerfile
ci/docker/opensuse/: Dockerfile  InstallDockerfile
ci/docker/ubuntu/: Dockerfile  InstallDockerfile  setup.sh
ci/docker/xenial/: Dockerfile  InstallDockerfile
ci/sample/: CMakeLists.txt
cmake/: CMakeAbseilConfig.cmake.in  CMakeLists.txt  Makefile  abseil.CMakeLists.txt  cctz.CMakeLists.txt
cmake/sample/: CMakeLists.txt
docker/: Makefile
